[gd_scene load_steps=4 format=3 uid="uid://d4811sl8t5w6"]

[ext_resource type="Script" path="res://GUI/InventoryInterface/inventory_interface.gd" id="1_36di5"]
[ext_resource type="PackedScene" uid="uid://qxl2adeh8lnx" path="res://Systems/ItemSystem/Inventory/inventory.tscn" id="1_neakx"]
[ext_resource type="PackedScene" uid="uid://c1vkurm6kcchr" path="res://Systems/ItemSystem/Inventory/slot.tscn" id="3_kgnnb"]

[node name="InventoryInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_36di5")

[node name="PlayerInventory" parent="." instance=ExtResource("1_neakx")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="GrabbedSlot" parent="." instance=ExtResource("3_kgnnb")]
visible = false
modulate = Color(1, 1, 1, 0.494118)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
